Oct 27, 2002: Alex <alex_b@users.sourceforge.net>
- Number of servers in status bar now updated when enabling / disabling a
  filter and when finished searching for a player
- Created function reset_main_status_bar

Oct 26, 2002: Alex <alex_b@users.sourceforge.net>
- Set focus to Game Contains when adding new server filter
- Set focus to Game when adding new custom arg
- Added file dialog box (... button) to sound config page

Oct 26, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- cleanup q3_exec:
  - protocol dependant launching no longer requires full path, will search $PATH
  - do not check for valid mod dir for games other than q3a
  - do not check for punkbuster for games other than q3a
  - pass all options as separate arguments
- fix xqf killing itself when exec failed

Oct 25, 2002: Alex <alex_b@users.sourceforge.net>
- Segfault fix - q3_exec - launch game even if it doesn't respond to refresh
- Tooltip updates

Oct 24, 2002: Alex <alex_b@users.sourceforge.net>
- Make tooltips global so it can be used anywhere.  Have new tooltips use
  toolbar tooltip enable / disable option

Oct 24, 2002: Alex Burger <alex@users.sourceforge dot net>
- Use game_set_attribute / game_get_attribute for game Notes
- Added notes for SFS, UT2003 and HL
- Add note to Unreal Tournament config page to see documentation
  for modifications to UT script.
- Make UT logo round, remove 2 from UT2 logo
- Improve custom args editor

Oct 24, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- code cleanup
- do not append first argument directly to ip in ut to be consistent with q3

Oct 23, 2002: Jordi Mallach <jordi@sindominio.net>
- Update Catalan and Spanish translations.

Oct 23, 2002: Alex Burger <alex@users.sourceforge dot net>
- Add spacing around button
- Added file dialog box (... button) to game config page
- Removed rafix option from q3_exec
- Modified vmfix option in q3_exec to make custom args preferred over
  vmfix args
- Added button to add default custom args to editor page