@@ -127,6 +127,15 @@ if test "x$GCC" = xyes; then
 	CFLAGS="$CFLAGS -Wall"
 fi
 
+AC_ARG_ENABLE(profiling,[  --enable-profiling   compile with profiling (default=no)], enable_profile=yes, )
+AC_MSG_CHECKING(whether profiling is requested)
+if test x$enable_profile = xyes; then
+	CFLAGS="$CFLAGS -pg"
+	AC_MSG_RESULT([yes])
+else
+	AC_MSG_RESULT([no])
+fi
+
 AC_OUTPUT([Makefile intl/Makefile po/Makefile.in \
 src/Makefile src/xpm/Makefile \
 docs/Makefile
