@@ -1,3 +1,7 @@
+Oct 27, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
+- speed improvements for host and server lists
+- fix plural form in reset_main_status_bar
+
 Oct 27, 2002: Alex <alex_b@users.sourceforge.net>
 - Number of servers in status bar now updated when enabling / disabling a
   filter and when finished searching for a player
